--- a/index.html
+++ b/index.html
@@ -1,12 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+    <link rel="stylesheet" href="./style.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700;800&display=swap"
+      rel="stylesheet"
+    />
+  </head>
+  <body>
+    <h1>ToDo List</h1>
+    <div class="box">
+      <div class="container">
+        <form>
+          <input type="text" class="tasks" placeholder="" />
+        </form>
+        <button class="add">Добавить</button>
+      </div>
+      <section class="list">
+        <div class="box_task">
+          <label>
+            <input type="checkbox" class="check" />
+            <p class="list_text">
+              Lorem ipsum dolor sit amet cojjjkjj kkkkjjksit amet cojjjkjj
+              kkkkjjk jkjkjj nsectetur,
+            </p>
+          </label>
+          <button class="cross"><img src="./❌.png" alt="" /></button>
+        </div>
+      </section>
+      <div class="footer">
+        <button class="delete_completed">Удалить завершенные</button>
+        <button class="delete_all">Удалить все</button>
+      </div>
+    </div>
+  </body>
 </html>
