--- a/index.html
+++ b/index.html
@@ -18,26 +18,26 @@
     <div class="box">
       <div class="container">
         <form>
-          <input type="text" class="tasks" placeholder="" />
+          <input type="text" class="input_task" placeholder="" />
         </form>
         <button class="add">Добавить</button>
       </div>
       <section class="list">
-        <div class="box_task">
+        <!-- <div class="box_task">
           <label>
             <input type="checkbox" class="check" />
             <p class="list_text">
-              Lorem ipsum dolor sit amet cojjjkjj kkkkjjksit amet cojjjkjj
-              kkkkjjk jkjkjj nsectetur,
+              Lorem ipsum dolor 
             </p>
           </label>
           <button class="cross"><img src="./❌.png" alt="" /></button>
-        </div>
+        </div> -->
       </section>
-      <div class="footer">
+      <div class="box_delete">
         <button class="delete_completed">Удалить завершенные</button>
         <button class="delete_all">Удалить все</button>
       </div>
     </div>
+    <script src="./script.js" type="module"></script>
   </body>
 </html>
