--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
       <div class="container">
         <form>
           <input type="text" class="input_task" placeholder="" />
-        </form>
-        <button class="add">Добавить</button>
+                <button class="add">Добавить</button>
+                </form>
       </div>
-      <section class="list">
-        <!-- <div class="box_task">
+      <ul class="list">
+        <!-- <li class="box_task">
           <label>
             <input type="checkbox" class="check" />
             <p class="list_text">
@@ -31,13 +31,13 @@
             </p>
           </label>
           <button class="cross"><img src="./❌.png" alt="" /></button>
-        </div> -->
-      </section>
+        </li> -->
+      </ul>
       <div class="box_delete">
         <button class="delete_completed">Удалить завершенные</button>
         <button class="delete_all">Удалить все</button>
       </div>
     </div>
-    <script src="./script.js" type="module"></script>
+    <script src="./1.js" ></script>
   </body>
 </html>
