--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link rel="stylesheet" href="./style.css" />
+    <link rel="stylesheet" href="./style/style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -30,7 +30,7 @@
               Lorem ipsum dolor 
             </p>
           </label>
-          <button class="cross"><img src="./❌.png" alt="" /></button>
+          <button class="cross"><img src="./app/cross.png" alt="" /></button>
         </li> -->
       </ul>
       <div class="box_delete">
@@ -38,6 +38,6 @@
         <button class="delete_all">Удалить все</button>
       </div>
     </div>
-    <script src="./1.js" ></script>
+    <script src="./app/script2.js" ></script>
   </body>
 </html>
